--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - lib/img/burgers/
+    - lib/img/deserts/
+    - lib/img/drinks/
+    - lib/img/salads/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
