--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   provider: ^5.0.0
+  extensions_pack: 2.4.7
+
 
 dev_dependencies:
   flutter_test:
