--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   provider: ^5.0.0
   extensions_pack: 2.4.7
+  dart_extensions: 2.2.4
 
 
 dev_dependencies:
