--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   extensions_pack: 2.4.7
   dart_extensions: 2.2.4
   flutter_credit_card: 4.1.0
+  intl: 0.19.0
 
 
 dev_dependencies:
