--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   interact: 2.2.0
   firebase_core: 3.13.0
   firebase_auth: 5.5.3
+  cloud_firestore: ^5.6.7
 
 dependency_overrides:
   dart_console: ^1.1.2
